third_party/rust/cxx/v1/crate/tests/ui/function_with_body.stderr
error: expected `;`
 --> $DIR/function_with_body.rs:4:16
  |
4 |         fn f() {}
  |                ^
