third_party/rust/cxx/v1/crate/tests/ui/function_with_body.rs
#[cxx::bridge]
mod ffi {
    unsafe extern "C++" {
        fn f() {}
    }
}

fn main() {}
